KDE proofreaders typos http://www.kde.me.uk/index.php?page=kdesdk_typos

--- a/buildtools/autotools/choosetargetdlgbase.ui
+++ b/buildtools/autotools/choosetargetdlgbase.ui
@@ -161,7 +161,7 @@
                         <cstring>textLabel1</cstring>
                     </property>
                     <property name="text">
-                        <string>&lt;b&gt;Note:&lt;/b&gt; If you abort, your files will be created, &lt;b&gt;but will not&lt;/b&gt; be added to the project.</string>
+                        <string>&lt;b&gt;Note:&lt;/b&gt; If you abort your files will be created &lt;b&gt;but will not&lt;/b&gt; be added to the project.</string>
                     </property>
                 </widget>
             </vbox>
