--- a/parts/distpart/distpart_ui.ui
+++ b/parts/distpart/distpart_ui.ui
@@ -521,7 +521,7 @@
                                 </item>
                                 <item>
                                     <property name="text">
-                                        <string>Spark</string>
+                                        <string>Sparc</string>
                                     </property>
                                 </item>
                                 <property name="name">
