KDE proofreaders, exclamation marks

--- a/buildtools/autotools/removetargetdlgbase.ui
+++ b/buildtools/autotools/removetargetdlgbase.ui
@@ -146,7 +146,7 @@
                         </size>
                     </property>
                     <property name="text">
-                        <string>&lt;b&gt;Note:&lt;/b&gt; You will not be able to undo this operation! And please check your Makefile.am afterwards!</string>
+                        <string>&lt;b&gt;Note:&lt;/b&gt; you will not be able to undo this operation. Please check your Makefile.am afterwards.</string>
                     </property>
                 </widget>
             </grid>
