--- a/languages/cpp/debugger/debuggerconfigwidgetbase.ui
+++ b/languages/cpp/debugger/debuggerconfigwidgetbase.ui
@@ -79,7 +79,7 @@
                 </sizepolicy>
             </property>
             <property name="text">
-                <string>Path to &amp;gdb:</string>
+                <string>Directory where &amp;gdb resides (eg /usr/bin/):</string>
             </property>
             <property name="buddy" stdset="0">
                 <cstring>gdbPath_edit</cstring>
